# egui-todo

./: .gitignore  Cargo.toml  egui_todo-b93071909a52f71a.js  egui_todo-b93071909a52f71a_bg.wasm  index.html
assets/: sw.js
src/: api.rs  app.rs  lib.rs  main.rs  todos.rs
